@@ -6,7 +6,7 @@
 # Copyright (c) 1998-1999 by Scriptics Corporation.
 # All rights reserved.
 #
-# RCS: @(#) $Id: textDisp.test,v 1.42.2.1 2008/10/10 16:28:25 dgp Exp $
+# RCS: @(#) $Id: textDisp.test,v 1.42.2.2 2010/01/07 15:35:04 dkf Exp $
 
 package require tcltest 2.1
 eval tcltest::configure $argv
@@ -3845,6 +3845,30 @@ test textDisp-33.5 {bold or italic fonts} win {
     }
 } {italic font measurement ok}
 destroy .tt
+
+test textDisp-34.1 {Text widgets multi-scrolling problem: Bug 2677890} -setup {
+    pack [text .t1 -width 10 -yscrollcommand {.sy set}] \
+	[ttk::scrollbar .sy -orient vertical -command {.t1 yview}] \
+	-side left -fill both
+    bindtags .sy {}; # No clicky!
+    set txt ""
+    for {set i 0} {$i < 99} {incr i} {
+	lappend txt "$i" [list pc $i] "\n" ""
+    }
+    set result {}
+} -body {
+    .t1 insert end {*}$txt
+    update
+    lappend result [.sy get]
+    .t1 replace 6.0 6.0+1c "*"
+    lappend result [.sy get]
+    after 0 {lappend result [.sy get]}
+    after 1000 {lappend result [.sy get]}
+    vwait result;vwait result
+    return $result
+} -cleanup {
+    destroy .t1 .sy
+} -result {{0.0 1.0} {0.0 1.0} {0.0 1.0} {0.0 0.24}}
 
 deleteWindows
 option clear
